--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             <div class="stans-styles">
                 <h3>Github isn't easy!</h3>
             </div>
+            
+            <div class="Julia Style">
+                <h3> Julia loves seafood. In fact, she has salmon dinner on every Thursday</h3>
+            </div>
+                 
         </section>
     </main>
 </body>
