move group project out of profile to desktop

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             
             <div class="Julia Style">
-                <h3> Julia loves seafood. In fact, she has salmon dinner on every Thursday</h3>
+                <h3> Julia loves seafood! In fact, she has salmon dinner on every Thursday</h3>
             </div>
                  
         </section>
